--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,7 @@
 
 body {
   margin: 0;
-  font-family: 'Instrument Sans', sans-serif;
+  font-family: "Geist", sans-serif;
   font-weight: 400;
   font-size: 16px;
 }
