fix: add borders

--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,8 @@
   --neko-theme-button-text-color: #ffffff;
   --neko-theme-secondary-bg-color: #eeeeee;
   --neko-theme-tertiary-bg-color: #dddddd;
+  --neko-theme-quaternary-bg-color: #cccccc;
+  --neko-theme-quinary-bg-color: #bbbbbb;
   --neko-theme-hint-color: #545454;
 }
 
@@ -18,6 +20,8 @@
     --neko-theme-button-text-color: #181818;
     --neko-theme-secondary-bg-color: #222222;
     --neko-theme-tertiary-bg-color: #363636;
+    --neko-theme-quaternary-bg-color: #444444;
+    --neko-theme-quinary-bg-color: #545454;
     --neko-theme-hint-color: #bbbbbb;
   }
 }
